--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,5 @@
     "version": "1.0.0",
     "description": "Allows you to swap Hypesquad House using .swap",
     "author": "V8A#5855",
-    "license": "MIT"
+    "license": "WTFPL"
 }
